Fixied the bug where carousel would cut off text on mobile when viewing site horizontally. Also fixed overlapping issue on home section 1 with when in same view port configuration

--- a/styles/components_styles/carousel.module.css
+++ b/styles/components_styles/carousel.module.css
@@ -1,6 +1,6 @@
 .carousel {
     overflow: hidden;
-    height: 40vh;
+    height: max(auto, 800px);
     background-color: #140E3A;
     width: 100vw;
 }
@@ -40,6 +40,7 @@
 
 .carousel_tile_body {
     white-space: normal;
+    font-size: max(16px, 2vmin);
     margin: 20px;
     margin-top: 40px;
 }
@@ -71,10 +72,6 @@
     .carousel_tile_title {
         font-size: 3vw;
         font-weight: bold;
-    }
-    
-    .carousel_tile_body {
-        font-size: 2.5vw;
     }
 
   }
